Updating progress for Day 7

--- a/day_07/assets/stylesheets/main.css
+++ b/day_07/assets/stylesheets/main.css
@@ -199,6 +199,25 @@ cite, em {
   line-height: 33px;
 }
 
+
+/*
+  ========================================
+  Speakers
+  ========================================
+*/
+  
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding: 22px 0;
+  text-align: center;
+}
+
+.speaker {
+  margin-bottom: 44px;
+}
+
 /*
   ========================================
   Links
@@ -223,6 +242,15 @@ p a {
 .primary-header a:hover,
 .primary-footer a:hover {
   color: #648880;
+}
+
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
 }
 
 /*
