--- a/day_08/assets/stylesheets/main.css
+++ b/day_08/assets/stylesheets/main.css
@@ -378,3 +378,26 @@ p a {
   text-align: center;
 }
 
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+/*
+  ========================================
+  Venue
+  ========================================
+*/
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+.venue-hotel {
+  margin-bottom: 22px;
+}
+.venue-map {
+  height: 264px;
+}
+
