--- a/day_11/css/styles.css
+++ b/day_11/css/styles.css
@@ -23,6 +23,81 @@ Typography
 }
 
 
+.greytext14 {
+	font-size: 14px;
+	color: #8899A6;
+}
+
+.greytext12{
+	font-size: 13px;
+	color: #8899A6;
+}
+
+.greytext13 {
+	font-size: 13px;
+	color: #8899A6;
+}
+
+.greytext18 {
+	font-size: 18px;
+	color: #8899A6;
+}
+
+.greytext22 {
+	font-size: 22px;
+	color: #8899A6;
+}
+
+.blacktext14 {
+	font-size: 14px;
+	color: #292F33;
+}
+
+.blacktext13 {
+	font-size: 13px;
+	color: #292F33;
+}
+
+.blacktext18 {
+	font-size: 18px;
+	color: #292F33;
+}
+
+.blacktext13bold {
+	font-size: 13px;
+	color: #292F33;
+	font-weight: bold;
+}
+
+.blacktext18bold {
+	font-size: 18px;
+	color: #292F33;
+	font-weight: bold;
+}
+.bluetext18 {
+	font-size: 18px;
+	color: #20A3D9;
+}
+
+.bluetext14 {
+	font-size: 14px;
+	color: #20A3D9;
+}
+
+.bluetext13 {
+	font-size: 12px;
+	color: #20A3D9;
+}
+.bluetext12 {
+	font-size: 12px;
+	color: #20A3D9;
+}
+
+.whitetext16 {
+	font-size: 16px;
+	color: #FFF;
+}
+
 
 
 /*
@@ -106,7 +181,7 @@ header {
 
 /*
 ======================================
-Profile
+PROFILE STATS MID SECTION
 ======================================
 */
 
@@ -247,5 +322,353 @@ margin-top: 8px;
 
 
 
+/*
+====================================
+BOTTOM CONTAINER
+====================================
+*/
 
 
+/*.bottomcontainer {
+	background-color: #F4F7F9;
+	width: 1280px;
+	height: 1000px;
+}*/
+
+
+
+
+
+
+/*
+====================================
+BOTTOM LEFT CONTAINER
+====================================
+*/
+
+.leftcontainer {
+	float: left;
+}
+
+
+/*
+<------Twitter Profile Information------>
+*/
+
+
+
+.profileinfo h4 {
+	font-size: 24px;
+	font-weight: bold;
+	padding-left: 6px
+}
+
+.profileinfo {
+	margin-left: 170px;
+	margin-top: 40px;
+	width: 300px;
+}
+
+.profilehandle {
+	padding-left: 5px;
+	padding-top: 2px;
+}
+
+.profiledesc {
+	padding-left: 8px;
+	padding-top: 15px;
+	line-height: 21px;
+}
+
+
+.profilebackground {
+	padding-top: 12px;
+	padding-left: 6px;
+}
+
+.profilebackground li p {
+	margin-bottom: 12px;
+}
+
+.profilebackground li img {
+	margin-right: 6px;
+}
+
+
+.profilebackground img,
+.photocount img {
+	max-width: 20px;
+}
+
+.profilecountry img,
+.profilecountry p,  
+.profilelink img,
+.profilelink p, 
+.profilejoin img,
+.profilejoin p {
+	float: left;
+}
+
+.profilelink,
+.profilejoin {
+	clear: both;
+}
+
+
+
+/*
+<------Twitter Profile gallery------>
+*/
+
+.profilephotos {
+	margin-left: 170px;
+	margin-top: 40px;
+	width: 300px;
+}
+
+.profilephotos img,
+.profilephotos p {
+	float: left;
+}
+
+.profilephotos {
+	clear: both;
+}
+
+.photocount {
+	margin-top: 10px;
+	margin-left: 6px;
+}
+
+.profilephotos li img {
+	margin-right: 6px;
+}
+
+.photogalleries {
+	clear: both;
+	float: left;
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+
+
+.photogalleries img {
+	max-width: 90px;
+	border-radius: 4px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+}
+
+
+/*
+<------Join Twitter------>
+*/
+
+/*.joincallout {
+	clear: both;
+/*	margin: left;*/
+
+
+
+.joincallout {
+	clear: both;
+	margin-left: 163px;
+	margin-top: 40px;
+}
+
+
+.jointitle {
+	padding-top: 20px;
+	margin-left: 16px;
+/*	background-color: #000;*/
+}
+
+.jointitle h3{
+	font-size: 22px;
+	color: #66757F;
+}
+
+.jointexts {
+	margin-top: 14px;
+	margin-left: 16px;
+	margin-bottom: 20px;
+}
+
+
+.joininfo {
+	width: 310px;
+	height: 160px;
+	background-color: #DDD;
+	border-radius: 4px;
+/*	cursor: pointer;*/
+/*	line-height: normal;*/
+/*	padding: 6px 24px;*/
+}
+
+.joinbutton {
+	width: 278px;
+	height: 44px;
+	background-color: #5EB0EE;
+	border-radius: 4px;
+	margin-left: 14px;
+}
+
+.signup-text p{
+ text-align: center;
+	padding-top: 11px;
+}
+
+.jointitle p{
+	font-size: 22px;
+	color: #66757F;
+}
+
+/*
+<------People Suggestions------>
+*/
+
+.peoplesuggestions {
+	margin-left: 163px;
+	margin-top: 12px;
+	padding-bottom: 16px;
+	width: 310px;
+	height: 100%;
+	border: solid 1px #E1E8ED;
+	border-radius: 4px;
+}
+
+.suggest-title {
+	margin-bottom: 53px;
+}
+
+.suggest-title h4 {
+	padding-left: 15px;
+	padding-top: 20px;
+}
+
+.suggest-title p {
+	padding-top: 5px;
+}
+
+.suggest-title h4,
+.suggest-title p {
+	float: left;
+
+
+}
+
+.suggest-person {
+	clear: both;
+	margin-left: 15px;
+/*	padding-top: 10px;*/
+}
+
+.suggestportrait {
+	float: left;
+	padding-bottom: 10px;
+}
+
+.suggestportrait img{
+	max-width: 36px;
+	margin-right: 12px;
+	border-radius: 2px;
+}
+
+
+.suggestname,
+.suggestprofile {
+	padding-top: 2px;
+}
+
+.suggestperson2,
+.suggestperson3,
+.suggestperson4,
+.suggestperson5,
+.suggestperson6 {
+	clear: both;
+}
+
+/*
+<------Trends Widget------>
+*/
+
+.trends-container {
+	margin-left: 163px;
+	margin-top: 18px;
+	width: 310px;
+	height: 100%;
+	border: solid 1px #E1E8ED;
+	border-radius: 4px;
+}
+
+
+.trends-title {
+	margin-bottom: 53px;
+}
+
+.trends-title h4 {
+	padding-left: 15px;
+	padding-top: 20px;
+}
+
+.trends-title p {
+	padding-top: 5px;
+}
+
+
+.trends-title h4,
+.trends-title p {
+	float: left;
+}
+
+.trends-promotion {
+	clear: both;
+	margin-left: 15px;
+	margin-bottom: 16px;
+}
+
+.trends-promotion img{
+	float: left;
+	max-width: 20px;
+}
+
+.trends-list {
+	clear: both;
+	margin-left: 15px;
+}
+
+.trends-list p {
+	padding-bottom: 10px;
+}
+
+
+/*
+====================================
+BOTTOM RIGHT CONTAINER
+====================================
+*/
+
+.rightcontainer {
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
+	width: 632px;
+	height: 1000px;
+	border: solid 1px #E1E8ED;
+	border-radius: 4px;
+}
+
+.tweet-menu p {
+	float: left;
+	margin-left: 16px;
+	margin-top: 16px;
+	padding-right: 20px;
+	margin-bottom: 16px;
+}
+
+.tweet-menu-line {
+	clear: both;
+	border-bottom: 1px solid;
+	border-color: #E1E8ED;
+	width: 632px;
+}
