initial commit for day 12

--- a/day_11/Surf_and_Paddle/css/style.scss
+++ b/day_11/Surf_and_Paddle/css/style.scss
@@ -319,7 +319,7 @@ aside {
 
 
 
-/*This section outlines the Popular Posts Images*/
+/*This section outlines the Popular Posts Imagess*/
 
 .popularposts {
 	width: 1300px;
